# raylib-sketchbook

./: .gitignore  README.md
whiteboard/: CMakeLists.txt  README.md  main.c
whiteboard/src/: main.c
whiteboard/src/struct/: Brush.c  Brush.h
